# rewrite_git_history

./: .gitignore  Cargo.toml  README.md
prepare-tables/src/: main.rs
push-to-git/src/: main.rs
