[package]
name = "git-push-automatic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
serde_json = "1.0"
calamine = "0.23"
polars = { version = "0.36", features = [
  "lazy",
  "parquet",
  "arg_where",
  "strings",
  "lazy_regex",
] }
chrono = "0.4"
smartstring = "1.0"
git2 = "0.18"

[[bin]]
name = "prepare-tables"
path = "prepare-tables/src/main.rs"

[[bin]]
name = "push-to-git"
path = "push-to-git/src/main.rs"
